--- a/style.css
+++ b/style.css
@@ -62,17 +62,17 @@ nav ul li a:hover, a.active{
 .booking-form{
     background-color: #fff;
     border: 1px solid #ddd;
-    padding: 10px;
+    padding: 2px 15px 2px 15px;
     border-radius: 5px;
     float: right;
-    width: 65%;
+    width: 70%;
     margin-left: 180px;
 }
 .booking-form h3{
     margin: 10px 0px;
 }
 .booking-form  .input-group{
-    margin: 10px 0;
+    margin: 0 0;
 }
 .booking-form  .calculations{
     margin: 10px 0;
@@ -84,7 +84,7 @@ nav ul li a:hover, a.active{
 .booking-form input{
     width: 100%;
     display: block;
-    padding: 10px;
+    padding: 6px;
     border-radius: 5px;
     border: none;
     background: #F3F5FF;
@@ -164,4 +164,8 @@ nav ul li a:hover, a.active{
     float: right;
     font-size: 10px;
     color: blue;
+}
+#totalCostPage2{
+    font-size: 30px;
+    color: red;
 }
